crates/biome_js_type_info/src/snapshots/biome_js_type_info__type_info__tests__infer_type_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/src/type_info.tests.rs
expression: ty
---
Type(
    Function(
        Function {
            is_async: false,
            type_parameters: [],
            name: Some(
                Borrowed(
                    "returnsPromise",
                ),
            ),
            parameters: [],
            return_type: Type(
                Type(
                    Reference(
                        TypeReference {
                            qualifier: TypeReferenceQualifier(
                                [
                                    Borrowed(
                                        "Promise",
                                    ),
                                ],
                            ),
                            ty: Type(
                                Unknown,
                            ),
                            type_parameters: [
                                Type(
                                    Number,
                                ),
                            ],
                        },
                    ),
                ),
            ),
        },
    ),
)
